--- a/views/add.ejs
+++ b/views/add.ejs
@@ -54,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="contact">
 
             <div class="container">
-                <h1>More product</h1>
+                <h1>Add product</h1>
                 <div class="contact-form">
 
                     <div class="col-md-8 contact-grid">
@@ -71,6 +71,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <option value="Caps & Hats">Caps & Hats</option>
                                 <option value="Hoodies & Sweatshirts">Hoodies & Sweatshirts</option>
                             </select><br><br>
+                            <select name="sex" aria-placeholder="Sex">
+                                <option value="man">Man</option>
+                                <option value="woman">Woman</option>
+                            </select>
+                            <br><br>
                             <input type="number" placeholder="Price" name="price"><br><br>
                             <input type="file" name='files'><br>
                             <div class="send">
