--- a/views/top.ejs
+++ b/views/top.ejs
@@ -47,20 +47,20 @@
                                     <div class="col1">
                                         <div class="h_nav">
                                             <ul>
-                                                <li><a href="/products/bags/1">Bags</a></li>
-                                                <li><a href="/products/caps&hats/1">Caps & Hats</a></li>
-                                                <li><a href="/products/hoodies&sweatshirts/1">Hoodies & Sweatshirts</a></li>
-                                                <li><a href="/products/t-shirts/1">T-Shirts</a></li>
+                                                <li><a href="/products/man/bags/1">Bags</a></li>
+                                                <li><a href="/products/man/caps&hats/1">Caps & Hats</a></li>
+                                                <li><a href="/products/man/hoodies&sweatshirts/1">Hoodies & Sweatshirts</a></li>
+                                                <li><a href="/products/man/t-shirts/1">T-Shirts</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col1">
                                         <div class="h_nav">
                                             <ul>
-                                                <li><a href="/products/shirts/1">Shirts</a></li>
-                                                <li><a href="/products/shoes-boots&trainers/1">Shoes, Boots & Trainers</a></li>
-                                                <li><a href="/products/shorts/1">Shorts</a></li>
-                                                <li><a href="/products/suits&blazers/1">Suits & Blazers</a></li>
+                                                <li><a href="/products/man/shirts/1">Shirts</a></li>
+                                                <li><a href="/products/man/shoes-boots&trainers/1">Shoes, Boots & Trainers</a></li>
+                                                <li><a href="/products/man/shorts/1">Shorts</a></li>
+                                                <li><a href="/products/man/suits&blazers/1">Suits & Blazers</a></li>
 
                                             </ul>
                                         </div>
@@ -74,20 +74,20 @@
                                     <div class="col1">
                                         <div class="h_nav">
                                             <ul>
-                                                <li><a href="/products/bags/1">Bags</a></li>
-                                                <li><a href="/products/caps&hats/1">Caps & Hats</a></li>
-                                                <li><a href="/products/hoodies&sweatshirts/1">Hoodies & Sweatshirts</a></li>
-                                                <li><a href="/products/t-shirts/1">T-Shirts</a></li>
+                                                <li><a href="/products/woman/bags/1">Bags</a></li>
+                                                <li><a href="/products/woman/caps&hats/1">Caps & Hats</a></li>
+                                                <li><a href="/products/woman/hoodies&sweatshirts/1">Hoodies & Sweatshirts</a></li>
+                                                <li><a href="/products/woman/t-shirts/1">T-Shirts</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col1">
                                         <div class="h_nav">
                                             <ul>
-                                                <li><a href="/products/shirts/1">Shirts</a></li>
-                                                <li><a href="/products/shoes-boots&trainers/1">Shoes, Boots & Trainers</a></li>
-                                                <li><a href="/products/shorts/1">Shorts</a></li>
-                                                <li><a href="/products/suits&blazers/1">Suits & Blazers</a></li>
+                                                <li><a href="/products/woman/shirts/1">Shirts</a></li>
+                                                <li><a href="/products/woman/shoes-boots&trainers/1">Shoes, Boots & Trainers</a></li>
+                                                <li><a href="/products/woman/shorts/1">Shorts</a></li>
+                                                <li><a href="/products/woman/suits&blazers/1">Suits & Blazers</a></li>
 
                                             </ul>
                                         </div>
@@ -96,7 +96,7 @@
                             </div>
                         </li>
 
-                        <li><a class="color6" href="/add">More product</a></li>
+                        <li><a class="color6" href="/add">Add product</a></li>
                     </ul>
                 </div>
 
