--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,7 +105,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h1>NEW RELEASED</h1>
                     <div class="grid-in">
                         <div class="col-md-4 grid-top">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi.jpg" alt="">
+                            <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-left    b-delay03 ">
                                         <span>T-Shirt</span>
@@ -114,60 +114,60 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </a>
 
 
-                            <p><a href="single.html">Contrary to popular</a></p>
+                            <p><a href="#">Contrary to popular</a></p>
                         </div>
                         <div class="col-md-4 grid-top">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi1.jpg" alt="">
+                            <a href="/products/man/t-shirts/1" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi1.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-left    b-delay03 ">
                                         <span>Shoe</span>
                                     </h3>
                                 </div>
                             </a>
-                            <p><a href="single.html">classical Latin</a></p>
+                            <p><a href="#">classical Latin</a></p>
                         </div>
                         <div class="col-md-4 grid-top">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi2.jpg" alt="">
+                            <a href="/products/man/bags/1" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi2.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-left    b-delay03 ">
                                         <span>Bag</span>
                                     </h3>
                                 </div>
                             </a>
-                            <p><a href="single.html">undoubtable</a></p>
+                            <p><a href="#">undoubtable</a></p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="grid-in">
                         <div class="col-md-4 grid-top">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi3.jpg" alt="">
+                            <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi3.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-left    b-delay03 ">
                                         <span>Shirt</span>
                                     </h3>
                                 </div>
                             </a>
-                            <p><a href="single.html">suffered alteration</a></p>
+                            <p><a href="#">suffered alteration</a></p>
                         </div>
                         <div class="col-md-4 grid-top">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi4.jpg" alt="">
+                            <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi4.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-left    b-delay03 ">
                                         <span>Bag</span>
                                     </h3>
                                 </div>
                             </a>
-                            <p><a href="single.html">Content here</a></p>
+                            <p><a href="#">Content here</a></p>
                         </div>
                         <div class="col-md-4 grid-top">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi5.jpg" alt="">
+                            <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/pi5.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-left    b-delay03 ">
                                         <span>Shoe</span>
                                     </h3>
                                 </div>
                             </a>
-                            <p><a href="single.html">readable content</a></p>
+                            <p><a href="#">readable content</a></p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -177,7 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="content-top-bottom">
                     <h2>Featured Collections</h2>
                     <div class="col-md-6 men">
-                        <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t1.jpg" alt="">
+                        <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t1.jpg" alt="">
                             <div class="b-wrapper">
                                 <h3 class="b-animate b-from-top top-in   b-delay03 ">
                                     <span>Lorem</span>
@@ -189,7 +189,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6">
                         <div class="col-md1 ">
-                            <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t2.jpg" alt="">
+                            <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t2.jpg" alt="">
                                 <div class="b-wrapper">
                                     <h3 class="b-animate b-from-top top-in1   b-delay03 ">
                                         <span>Lorem</span>
@@ -200,7 +200,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-md2">
                             <div class="col-md-6 men1">
-                                <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t3.jpg" alt="">
+                                <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t3.jpg" alt="">
                                     <div class="b-wrapper">
                                         <h3 class="b-animate b-from-top top-in2   b-delay03 ">
                                             <span>Lorem</span>
@@ -210,7 +210,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                             </div>
                             <div class="col-md-6 men2">
-                                <a href="single.html" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t4.jpg" alt="">
+                                <a href="#" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="images/t4.jpg" alt="">
                                     <div class="b-wrapper">
                                         <h3 class="b-animate b-from-top top-in2   b-delay03 ">
                                             <span>Lorem</span>
